cabal-version:      2.4
name:               lightningkv
version:            0.1.0.0
synopsis: Cache Oblivious key-value store

description: Cache Oblivious key-value store

license:            BSD-3-Clause
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
category:           Datastructures
-- A copyright notice.
-- copyright:
extra-source-files: CHANGELOG.md


source-repository head
  type:     git
  location: https://github.com/noinia/lightningkv


library
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: src
  exposed-modules: Lightning.Tree
                   Lightning.Prokob
                   Lightning.BinTree
                   Lightning.Map

  other-modules:

  build-depends:
                     base                    ^>=4.14.1.0
                   , bifunctors              ^>= 5.5
                   , containers              ^>= 0.6
                   , deepseq                 ^>= 1.4.4.0
                   , primitive ^>= 0.7.2.0
                   , store                   ^>= 0.7
                   , streamly                ^>= 0.8
                   , tree-view ^>= 0.5.1
                   , vector                  ^>= 0.12
                   , vector-mmap             ^>= 0.0.3

  default-language:    Haskell2010
  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveGeneric
                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses

executable lightningkv
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base                    ^>= 4.14.1.0
                 , lightningkv

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  build-depends: base
               , doctest             >= 0.8
               , doctest-discover
               , QuickCheck
               , quickcheck-instances

  default-language:    Haskell2010
