cabal-version:      3.0
name:               thunderkv
version:            0.1.0.0
synopsis: Cache Oblivious key-value store

description: Cache Oblivious key-value store

license:            BSD-3-Clause
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
category:           Datastructures
-- A copyright notice.
-- copyright:
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/noinia/thunderkv

--------------------------------------------------------------------------------
-- Common Stanzas
--------------------------------------------------------------------------------

common common-build-depends
  build-depends:
                     base                    ^>= 4.14.1.0
                   , deepseq                 ^>= 1.4.4.0
                   , derive-storable         ^>= 0.3.0
                   , derive-storable-plugin  ^>= 0.2.3.4


common my-default-extensions
  default-language:    Haskell2010
  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveGeneric
                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , DerivingStrategies
                    , DerivingVia

--------------------------------------------------------------------------------
-- Main Library
--------------------------------------------------------------------------------

library
  import: common-build-depends, my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: src
  exposed-modules:
                  -- Thunder.Tree
                  --  Thunder.Prokob
                  --  Thunder.BinTree
                  --  Thunder.Map
                  --  Thunder.Map.Storable
                  --  Thunder.Map.Boxed
                  --  Thunder.Map.Base

  other-modules:
                     -- Thunder.Node
                   -- Thunder.KeyValue
                   -- Thunder.WithInfty

  build-depends:
                   , tree-mono
                   , tree-common

                   , bifunctors              ^>= 5.5
                   , containers              ^>= 0.6
                   , primitive               ^>= 0.7.2.0
                   , store                   ^>= 0.7
                   , streamly                ^>= 0.8
                   , tree-view               ^>= 0.5.1
                   , vector                  ^>= 0.12
                   , vector-mmap             ^>= 0.0.3
                   , transformers            ^>= 0.5.6
                   , integer-logarithms      ^>= 1.0

--------------------------------------------------------------------------------
-- The main implementation of the library using Backpack
--------------------------------------------------------------------------------

library thunderkv-backpack
  import: common-build-depends, my-default-extensions
  visibility: public
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: backpack-lib_src
  exposed-modules:
                  -- Thunder.Tree
                  --  Thunder.Prokob
                  --  Thunder.BinTree
                  --  Thunder.Map
                  --  Thunder.Map.Storable
                  --  Thunder.Map.Boxed
                  --  Thunder.Map.Base

  other-modules:
                     -- Thunder.Node
                   -- Thunder.KeyValue
                   -- Thunder.WithInfty

  signatures: Key

  -- signatures:      InftyElem

  build-depends:
                   , tree-mono
                   , tree-common

                   , bifunctors              ^>= 5.5
                   , containers              ^>= 0.6
                   , primitive               ^>= 0.7.2.0
                   , store                   ^>= 0.7
                   , streamly                ^>= 0.8
                   , tree-view               ^>= 0.5.1
                   , vector                  ^>= 0.12
                   , vector-mmap             ^>= 0.0.3
                   , transformers            ^>= 0.5.6
                   , integer-logarithms      ^>= 1.0

--------------------------------------------------------------------------------
-- Helper Libraries
--------------------------------------------------------------------------------

-- library tree-refill
--   import: common-build-depends, my-default-extensions
--   ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
--   hs-source-dirs: tree-refill_src
--   exposed-modules: Thunder.Tree.Refill
--   mixins:
--          , tree      (Thunder.Tree      as TreeAB_to_CD)
--          , tree      (Thunder.Tree      as TreeAB_to_CWithMaxD)
--          , withmax                                                requires (MaxElem as CAsElem)

--   build-depends:     tree
--                    -- , tree-mono
--                    , tree-common
--                    , cwithmax-impl
--                    , withmax
--                    , vector                  ^>= 0.12
--                    , primitive               ^>= 0.7.2.0

-- library treecwithmax
--   import: common-build-depends, my-default-extensions
--   ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
--   hs-source-dirs: treecwithmax
--   exposed-modules: TreeWithCMax
--   mixins:  tree       requires (C as CWithMax)
--          , withmax    requires ()
--          , cwithmax
--   build-depends: tree
--                , cwithmax

library cwithmax-impl
  import: common-build-depends, my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: cwithmax
  exposed-modules: CAsElem
  mixins:  tree

  build-depends:     tree

library tree
  import: common-build-depends, my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: tree_src
  exposed-modules: Thunder.Tree
  mixins:  tree-mono (Thunder.Tree.Mono as TreeAB) requires (NodeElem as A, LeafElem as B)
         , tree-mono (Thunder.Tree.Mono as TreeCD) requires (NodeElem as C, LeafElem as D)

  build-depends:     tree-mono
                   , tree-common
                   , node
                   , vector                  ^>= 0.12
                   , primitive               ^>= 0.7.2.0
                   , transformers            ^>= 0.5.6

library node
  import: common-build-depends, my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: node_src
  exposed-modules: Thunder.Node
  mixins:  tree-mono (Thunder.Node.Mono as NodeAB) requires (NodeElem as A, LeafElem as B)
         , tree-mono (Thunder.Node.Mono as NodeCD) requires (NodeElem as C, LeafElem as D)
  build-depends:     tree-mono
                   , tree-common

library tree-mono
  import: common-build-depends, my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: tree-mono_src
  exposed-modules: Thunder.Tree.Mono
                   Thunder.Node.Mono
  signatures: LeafElem
              NodeElem

  build-depends:     tree-common
                   , containers              ^>= 0.6
                   , tree-view               ^>= 0.5.1
                   , vector                  ^>= 0.12

library tree-common
  import: common-build-depends, my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: tree-common_src
  exposed-modules: Thunder.Tree.Types
                   Thunder.BinTree

library withmax
  import: common-build-depends, my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: withmax_src
  exposed-modules: WithMax
  signatures: MaxElem
  build-depends:     tree-mono

----------------------------------------
-- * Implementation libraries

-- library key-enum
--   import: my-default-extensions
--   ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
--   hs-source-dirs: src
--   exposed-modules: Key

library int-impl
  import: common-build-depends, my-default-extensions
  ghc-options: -O -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: int_impl
  exposed-modules: NodeElemInt, LeafElemInt

--------------------------------------------------------------------------------
-- Executable
--------------------------------------------------------------------------------

executable thunderkv
  import: my-default-extensions
  -- main-is:          Main.hs
  main-is:          Test.hs
  hs-source-dirs:   app


  -- Modules included in this executable, other than Main.
  -- other-modules:
  mixins: tree-mono requires (NodeElem as NodeElemInt, LeafElem as LeafElemInt)

  build-depends: base                    ^>= 4.14.1.0
               -- , thunderkv
               , tree-mono
               , int-impl
               , random                  ^>= 1.2.0




--------------------------------------------------------------------------------
-- DocTests
--------------------------------------------------------------------------------

test-suite doctests
  import: my-default-extensions
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  build-depends: base                     ^>= 4.14.1.0
               , doctest                  ^>= 0.8
               , doctest-discover
               , QuickCheck
               , quickcheck-instances

--------------------------------------------------------------------------------
-- Benchmarks
--------------------------------------------------------------------------------

benchmark bench
  import: my-default-extensions
  hs-source-dirs: bench

  main-is: Static.hs
  type: exitcode-stdio-1.0

  other-modules: SortedVec
  build-depends:
                base                    ^>= 4.14.1.0
              , thunderkv
              , criterion               ^>= 1.5.9
              -- , tasty-bench             >= 0.2
              , random                  ^>= 1.2
              , vector
              , deepseq
              , mtl
              , containers              ^>= 0.6

  ghc-options: -Wall -O2 -rtsopts -fno-warn-unticked-promoted-constructors
